--- a/src/app/shared/side-container/labels/labels.component.html
+++ b/src/app/shared/side-container/labels/labels.component.html
@@ -1,8 +1,4 @@
-<div class="app-panel shadow">
-  <div class="tool-panel">
-    <h3 class="panel-header">Etykiety</h3>
-
-  </div>
+<div>
   <input
     id="project-filter"
     class="filter border"
