--- a/src/styles.css
+++ b/src/styles.css
@@ -13,16 +13,16 @@ html, body{
     /* width: 100%; */
     /* padding: 10px; */
     box-sizing: border-box;
-    border: 1px solid black;
-    margin:4px;
-    border-radius: 8px;
+    /* border: 1px solid black; */
+    border-bottom: 1px solid black;
+    border-radius: 3px;
 }
 
 .form-control{
     width: 100%;
     box-sizing: border-box;
     padding: 5px;
-    border-radius: 8px;
+    border-radius: 3px;
     background-color: white;
     border: 1px solid black;
 }
@@ -65,20 +65,32 @@ html, body{
 
 .app-panel{
     height: 100%;
-    padding-left: 3px;
-    padding-right: 3px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    background-color: dimgray;
 }
 
 .list{
     overflow: auto;
+    /* TODO: wstawić tutaj kolor dodatkowy */
+    background-color: aqua;
+}
+
+.list::-webkit-scrollbar{
+  width: 10px;
+}
+
+.list::-webkit-scrollbar-track {
+  background: orange;        /* color of the tracking area */
+}
+.list::-webkit-scrollbar-thumb {
+  background-color: blue;    /* color of the scroll thumb */
+  border-radius: 3px;       /* roundness of the scroll thumb */
+
 }
 
 .filter{
-    height: 2em;
+    height: 17px;
     margin-bottom: 4px;
 }
 
@@ -86,14 +98,24 @@ html, body{
     border: 1px solid black;
     /* border: 1px solid transparent; */
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
+    border-radius: 3px;
+}
+
+.transparent-border{
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  border-radius: 3px;
+}
+
+.border-radius{
+  border-radius: 3px;
 }
 
 .list-item{
     display: flex;
-    border: 1px solid trainsparent;
-    padding: 5px;
+    padding: 8px;
     margin: 0;
+    font-size: 0.9em;
 }
 
 /* TODO: spradzić jak to rozdzielić z tym co jest wyżej */
@@ -105,7 +127,15 @@ html, body{
 
 .list-item-options{
     visibility: hidden;
-    padding: 5px;
+    /* padding: 5px; */
+}
+
+.list-item-options:hover{
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  border-radius: 3px;
+  cursor: pointer;
+  width: 20px;
+  text-align: center;
 }
 
 .small-list-item{
@@ -135,12 +165,6 @@ html, body{
     display: block;
 }
 
-.list-item-options:hover{
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    cursor: pointer;
-}
-
 .list-item:hover{
     background-color: aliceblue;
     z-index: 100;
@@ -164,12 +188,6 @@ html, body{
     background-color: seashell;
 }
 
-.transparent-border{
-    border: 1px solid transparent;
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
-}
-
 .shadow{
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
@@ -177,8 +195,8 @@ html, body{
 .button{
     margin-top: 5px;
     margin-bottom: 5px;
-    height: 3em;
-    border-radius: 8px;
+    height: 2em;
+    border-radius: 3px;
 }
 
 .small-button{
@@ -192,6 +210,7 @@ html, body{
     cursor: pointer;
     background-color: aliceblue;
 }
+
 .panel-header{
     margin-left: auto;
     margin-right: auto;;
@@ -214,10 +233,26 @@ html, body{
     cursor: default;
 }
 
+
+
 .mat-expansion-panel-body{
-    padding: 5px!important;
+    padding: 0px!important;
+    border-radius: 3px;
 }
 
+.mat-expansion-panel-content{
+  background-color: aliceblue;
+  padding: 4px;
+}
+
+.mat-expansion-panel{
+  padding:0px!important;
+}
+
+.form-group-header{
+  padding: 5px!important;
+  height: auto!important;
+}
 
 .insert-button{
     float:right;
@@ -284,6 +319,11 @@ html, body{
 .filter-controls{
     display: flex;
     padding: 0;
+}
+
+.controls-center{
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .filter-button{
@@ -484,3 +524,63 @@ html, body{
   margin-right: auto;
 }
 
+/* LISTY */
+.list-panel{
+  width: 260px;
+}
+
+.panel-header{
+  font-size: 15px;
+  margin: 5px auto 5px auto;
+}
+
+/* PANELE BOCZNE */
+.lists-options{
+  display: inline-block;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.action-item{
+  display: block;
+  position: relative;
+  margin-bottom: 4px;
+  box-sizing: border-box;
+}
+
+.action-label{
+  font-size: 24px;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+  z-index: 1;
+  display: flex;
+  overflow: hidden;
+  height: 48px;
+  width: 48px;
+  margin-right: 0;
+  box-sizing: border-box;
+}
+
+.action-label:hover{
+  border: 1px solid black;
+}
+
+.badge{
+  background-color: aqua;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  left: 0;
+  width: 4px;
+  height: 100%;
+}
+
+.active-side-item{
+  font-weight: bold;
+}
