--- a/src/app/tasks/tasks-container/tasks-container.component.html
+++ b/src/app/tasks/tasks-container/tasks-container.component.html
@@ -2,8 +2,8 @@
   <div class="project-title">
     <span class="project-name">{{getProjectName()}}</span>
     <span class="mode-buttons">
-      <button class="toolbar-button" (click)="changeTaskMode(taskMode.LIST)">Lista</button>
-    <button class="toolbar-button" (click)="changeTaskMode(taskMode.KANBAN)">Kanban</button>
+      <button class="toolbar-button" (click)="changeTaskMode(taskMode.LIST)">L</button>
+    <button class="toolbar-button" (click)="changeTaskMode(taskMode.KANBAN)">K</button>
     </span>
   </div>
 
