Questions in pomodoro

--- a/src/app/shared/side-container/pomodoro/pomodoro-settings/pomodoro-settings.component.html
+++ b/src/app/shared/side-container/pomodoro/pomodoro-settings/pomodoro-settings.component.html
@@ -17,7 +17,7 @@
   <div class="settings-group">
       <label class="settings-label">Czas długiej przerwy</label>
       <input type="number" class="settings-value"
-      [ngModel]="settings.longBreakTime" (ngModelChange)="settings.longBreakTime =$event"
+      [ngModel]="settings.longBreakTime" (ngModelChange)="settings.longreakTime =$event"
       (change)="service.updateSettings()">
   </div>
 
