--- a/src/app/shared/side-container/pomodoro/pomodoro-settings/pomodoro-settings.component.css
+++ b/src/app/shared/side-container/pomodoro/pomodoro-settings/pomodoro-settings.component.css
@@ -8,15 +8,17 @@
 
 .settings-group{
   height: auto;
+  display: flex;
 }
 
 .settings-label{
   font-size: small;
+  width: 100%;
 }
 
 .settings-value{
   float: right;
-  width: 30%;
-  max-width: 100px;
+  width: 40%;
+  max-width: 150px;
   text-align: right;
 }
