Moving tasks on calendar view

--- a/src/app/tasks/tasks-container/calendar/calendar.component.html
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="app-panel">
+<div class="calendar-view shadow app-panel">
   <div class="calendar-controls">
     <div id="month-control" class="date-control">
       <button (click)="decreaseMonth()"><</button>
