--- a/src/app/tasks/tasks-container/tasks-container.component.html
+++ b/src/app/tasks/tasks-container/tasks-container.component.html
@@ -8,7 +8,7 @@
     </span>
   </div>
 
-  <div class="tasks-container">
+  <div class="tasks-container-list">
     <!-- TODO: dokończyć i pododawać wszystko -->
     <app-tasks class="task-list"
       [hidden]="mode!=taskMode.LIST"
