--- a/src/app/tasks/tasks-container/calendar/calendar.component.css
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.css
@@ -1,3 +1,14 @@
+@import '../../../../styles.css';
+
+.calendar-view{
+  display: flex;
+    flex-direction: column;
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
 .grid{
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -7,7 +18,7 @@
   width: 95%;
   height: 90%;
   margin: auto;
-  grid-template-rows: 15% 15%;
+  grid-template-rows: repeat(6, 1fr);
 }
 
 .day-cell{
@@ -25,11 +36,6 @@
 
 .active-day{
   font-weight: bold;
-}
-
-.app-panel{
-  height: 100%;
-  width: 100%;
 }
 
 .calendar-controls{
