--- a/src/app/tasks/tasks-container/tasks-container.component.css
+++ b/src/app/tasks/tasks-container/tasks-container.component.css
@@ -10,3 +10,13 @@
   width: 30px;
   height: 30px;
 }
+
+.tasks-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.tasks-container-list{
+  height: 100%;
+}
