List of taks without date in calendar view

--- a/src/app/tasks/tasks-container/calendar/calendar.component.css
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.css
@@ -82,3 +82,11 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.tasks-without-date{
+  width: 100px;
+  height: 100%;
+}
+
+.calendar-container{
+  display: flex;
+}
