--- a/src/app/tasks/tasks-container/calendar/calendar.component.html
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.html
@@ -11,19 +11,39 @@
       <button (click)="increaseYear()">></button>
     </div>
   </div>
-  <div class="grid">
-    <div *ngFor="let day of cells" [ngClass]="{
-      'active-day': day.active,
-      'day-cell':true
-    }"
-    >
-    <ng-container
-    [ngTemplateOutlet]="day_cell"
-    [ngTemplateOutletContext]="{ $implicit: day }"
-    ></ng-container>
+  <div class="calendar-container">
+    <div [ngTemplateOutlet]="withoutDate">
+
+    </div>
+    <div class="grid">
+      <div *ngFor="let day of cells" [ngClass]="{
+        'active-day': day.active,
+        'day-cell':true
+      }"
+      >
+      <ng-container
+      [ngTemplateOutlet]="day_cell"
+      [ngTemplateOutletContext]="{ $implicit: day }"
+      ></ng-container>
+      </div>
     </div>
   </div>
 </div>
+
+<ng-template #withoutDate>
+  <!-- TODO: dorobić przeciąganie -->
+  <div class="tasks-without-date tasks-list"
+  cdkDropList
+  id="withoutDate"
+  #withoutDate="cdkDropList"
+  [cdkDropListData]="tasksWithoutDate"
+  [cdkDropListConnectedTo]="getCellNames()"
+  (cdkDropListDropped)="taskDrop($event)">
+
+    <div *ngFor="let task of tasksWithoutDate" class="task-item"
+    cdkDrag>{{task.getName()}}</div>
+  </div>
+</ng-template>
 
 <ng-template #day_cell let-day>
   <div>{{day.day}}</div>
@@ -35,7 +55,7 @@
   [cdkDropListData]="day.tasks"
   [cdkDropListConnectedTo]="getCellNames()"
   (cdkDropListDropped)="taskDrop($event)">
-
+    <!-- TODO: przenieść to do oddzielnego -->
     <div *ngFor="let task of day.tasks" class="task-item"
     cdkDrag>{{task.getName()}}</div>
 
