Added tasks from selected day in calendar view

--- a/src/app/tasks/tasks-container/calendar/calendar.component.css
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.css
@@ -55,6 +55,7 @@
 
 .task-item{
   border: 1px solid black;
+  font-size: small;
 }
 
 .tasks-list{
@@ -89,4 +90,13 @@
 
 .calendar-container{
   display: flex;
+  height: 100%;
+}
+
+.calendar-top-bar{
+  display: flex;
+}
+
+.day-number{
+  font-size: x-small;
 }
