--- a/src/app/tasks/tasks-container/calendar/calendar.component.css
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.css
@@ -1,4 +1,4 @@
-@import '../../../../styles.css';
+/* @import '../../../../styles.css'; */
 
 .calendar-view{
   display: flex;
@@ -73,9 +73,8 @@
   height: 100%;
 }
 
-.cdk-drag-preview {
+/* .cdk-drag-preview {
   box-sizing: border-box;
-  /* border-radius: 4px; */
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
@@ -92,7 +91,7 @@
 
 .item-list.cdk-drop-list-dragging .item-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
+} */
 
 .tasks-without-date{
   width: 100px;
@@ -125,5 +124,10 @@
 
 .current-day{
   border: 2px solid blue;
+  box-sizing: border-box;
+}
+
+.dragging{
+  border: 2px solid green;
   box-sizing: border-box;
 }
